--- a/src/catalogo.html
+++ b/src/catalogo.html
@@ -5,6 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Catalogo Tienda</title>
     <link rel="stylesheet" href="./main.css" />
+    <link rel="stylesheet" href="./catalogo.css" />
   </head>
   <body>
     <!-- Navbar -->
@@ -106,202 +107,42 @@
       <section class="mb-5">
         <div class="container">
           <h2 class="mb-4">Todos los productos</h2>
-          <div class="row">
-            <div class="col-12 col-lg-6 col-xl-4 p-3">
-              <div class="overflow-hidden shadow-sm rounded-4">
-                <img
-                  class="img-fluid"
-                  src="./assets/product-1.avif"
-                  alt="Blog image"
-                />
-                <div class="p-3">
-                  <h4 class="my-2">Ropa</h4>
-                  <p class="mt-3 text-black-50">
-                    Excelente atuendo de temporada para este verano.
-                  </p>
-                  <div class="d-flex justify-content-end ">
-                    <a class="btn" href="./catalogo.html">Ver producto</a>
-                  </div>
-                </div>
+          <div class="clothes-gallery" id="gallery">
+            <div class="card">
+              <div class="overflow-hidden">
+                <img src="./assets/clothes-1.avif" alt="..." />
               </div>
-            </div>
-            <div class="col-12 col-lg-6 col-xl-4 p-3">
-              <div class="overflow-hidden shadow-sm rounded-4">
-                <img
-                  class="img-fluid"
-                  src="./assets/product-1.avif"
-                  alt="Blog image"
-                />
-                <div class="p-3">
-                  <h4 class="my-2">Ropa</h4>
-                  <p class="mt-3 text-black-50">
-                    Excelente atuendo de temporada para este verano.
-                  </p>
-                  <div class="d-flex justify-content-end ">
-                    <a class="btn" href="./catalogo.html">Ver producto</a>
+              <div class="card-body">
+                <h5 class="card-title">Chamarra</h5>
+                <p class="text-black-50">
+                  <small>150 Bs.</small>
+                </p>
+                <p class="card-text fs-6">
+                  Lorem, ipsum dolor sit amet consectetur adipisicing elit.
+                  Quaerat totam eius pariatur saepe dolor unde iste explicabo.
+                </p>
+                <div class="d-flex justify-content-between">
+                  <div>
+                    <button class="btn btn-outline-primary">
+                      <svg
+                        xmlns="http://www.w3.org/2000/svg"
+                        width="24"
+                        height="24"
+                        viewBox="0 0 24 24"
+                        fill="none"
+                        stroke="currentColor"
+                        stroke-width="2"
+                        stroke-linecap="round"
+                        stroke-linejoin="round"
+                        class="lucide lucide-heart"
+                      >
+                        <path
+                          d="M19 14c1.49-1.46 3-3.21 3-5.5A5.5 5.5 0 0 0 16.5 3c-1.76 0-3 .5-4.5 2-1.5-1.5-2.74-2-4.5-2A5.5 5.5 0 0 0 2 8.5c0 2.3 1.5 4.05 3 5.5l7 7Z"
+                        />
+                      </svg>
+                    </button>
                   </div>
-                </div>
-              </div>
-            </div>
-            <div class="col-12 col-lg-6 col-xl-4 p-3">
-              <div class="overflow-hidden shadow-sm rounded-4">
-                <img
-                  class="img-fluid"
-                  src="./assets/product-1.avif"
-                  alt="Blog image"
-                />
-                <div class="p-3">
-                  <h4 class="my-2">Ropa</h4>
-                  <p class="mt-3 text-black-50">
-                    Excelente atuendo de temporada para este verano.
-                  </p>
-                  <div class="d-flex justify-content-end ">
-                    <a class="btn" href="./catalogo.html">Ver producto</a>
-                  </div>
-                </div>
-              </div>
-            </div>
-            <div class="col-12 col-lg-6 col-xl-4 p-3">
-              <div class="overflow-hidden shadow-sm rounded-4">
-                <img
-                  class="img-fluid"
-                  src="./assets/product-1.avif"
-                  alt="Blog image"
-                />
-                <div class="p-3">
-                  <h4 class="my-2">Ropa</h4>
-                  <p class="mt-3 text-black-50">
-                    Excelente atuendo de temporada para este verano.
-                  </p>
-                  <div class="d-flex justify-content-end ">
-                    <a class="btn" href="./catalogo.html">Ver producto</a>
-                  </div>
-                </div>
-              </div>
-            </div>
-            <div class="col-12 col-lg-6 col-xl-4 p-3">
-              <div class="overflow-hidden shadow-sm rounded-4">
-                <img
-                  class="img-fluid"
-                  src="./assets/product-1.avif"
-                  alt="Blog image"
-                />
-                <div class="p-3">
-                  <h4 class="my-2">Ropa</h4>
-                  <p class="mt-3 text-black-50">
-                    Excelente atuendo de temporada para este verano.
-                  </p>
-                  <div class="d-flex justify-content-end ">
-                    <a class="btn" href="./catalogo.html">Ver producto</a>
-                  </div>
-                </div>
-              </div>
-            </div>
-            <div class="col-12 col-lg-6 col-xl-4 p-3">
-              <div class="overflow-hidden shadow-sm rounded-4">
-                <img
-                  class="img-fluid"
-                  src="./assets/product-1.avif"
-                  alt="Blog image"
-                />
-                <div class="p-3">
-                  <h4 class="my-2">Ropa</h4>
-                  <p class="mt-3 text-black-50">
-                    Excelente atuendo de temporada para este verano.
-                  </p>
-                  <div class="d-flex justify-content-end ">
-                    <a class="btn" href="./catalogo.html">Ver producto</a>
-                  </div>
-                </div>
-              </div>
-            </div>
-            <div class="col-12 col-lg-6 col-xl-4 p-3">
-              <div class="overflow-hidden shadow-sm rounded-4">
-                <img
-                  class="img-fluid"
-                  src="./assets/product-1.avif"
-                  alt="Blog image"
-                />
-                <div class="p-3">
-                  <h4 class="my-2">Ropa</h4>
-                  <p class="mt-3 text-black-50">
-                    Excelente atuendo de temporada para este verano.
-                  </p>
-                  <div class="d-flex justify-content-end ">
-                    <a class="btn" href="./catalogo.html">Ver producto</a>
-                  </div>
-                </div>
-              </div>
-            </div>
-            <div class="col-12 col-lg-6 col-xl-4 p-3">
-              <div class="overflow-hidden shadow-sm rounded-4">
-                <img
-                  class="img-fluid"
-                  src="./assets/product-1.avif"
-                  alt="Blog image"
-                />
-                <div class="p-3">
-                  <h4 class="my-2">Ropa</h4>
-                  <p class="mt-3 text-black-50">
-                    Excelente atuendo de temporada para este verano.
-                  </p>
-                  <div class="d-flex justify-content-end ">
-                    <a class="btn" href="./catalogo.html">Ver producto</a>
-                  </div>
-                </div>
-              </div>
-            </div>
-            <div class="col-12 col-lg-6 col-xl-4 p-3">
-              <div class="overflow-hidden shadow-sm rounded-4">
-                <img
-                  class="img-fluid"
-                  src="./assets/product-1.avif"
-                  alt="Blog image"
-                />
-                <div class="p-3">
-                  <h4 class="my-2">Ropa</h4>
-                  <p class="mt-3 text-black-50">
-                    Excelente atuendo de temporada para este verano.
-                  </p>
-                  <div class="d-flex justify-content-end ">
-                    <a class="btn" href="./catalogo.html">Ver producto</a>
-                  </div>
-                </div>
-              </div>
-            </div>
-            <div class="col-12 col-lg-6 col-xl-4 p-3">
-              <div class="overflow-hidden shadow-sm rounded-4">
-                <img
-                  class="img-fluid"
-                  src="./assets/product-1.avif"
-                  alt="Blog image"
-                />
-                <div class="p-3">
-                  <h4 class="my-2">Ropa</h4>
-                  <p class="mt-3 text-black-50">
-                    Excelente atuendo de temporada para este verano.
-                  </p>
-                  <div class="d-flex justify-content-end ">
-                    <a class="btn" href="./catalogo.html">Ver producto</a>
-                  </div>
-                </div>
-              </div>
-            </div>
-            <div class="col-12 col-lg-6 col-xl-4 p-3">
-              <div class="overflow-hidden shadow-sm rounded-4">
-                <img
-                  class="img-fluid"
-                  src="./assets/product-1.avif"
-                  alt="Blog image"
-                />
-                <div class="p-3">
-                  <h4 class="my-2">Ropa</h4>
-                  <p class="mt-3 text-black-50">
-                    Excelente atuendo de temporada para este verano.
-                  </p>
-                  <div class="d-flex justify-content-end ">
-                    <a class="btn" href="./catalogo.html">Ver producto</a>
-                  </div>
+                  <a href="#" class="btn btn-secondary">Ver producto</a>
                 </div>
               </div>
             </div>
@@ -315,6 +156,126 @@
         <h6>Copyright 2023, MiWeb.com</h6>
       </div>
     </footer>
+
+    <!-- Favorites button -->
+    <a
+      href="#favorites"
+      class="btn btn-primary btn-lg rounded-circle favorites px-2 py-1"
+      data-bs-toggle="offcanvas"
+      aria-controls="favorites"
+    >
+      <svg
+        xmlns="http://www.w3.org/2000/svg"
+        width="24"
+        height="24"
+        viewBox="0 0 24 24"
+        fill="none"
+        stroke="currentColor"
+        stroke-width="2"
+        stroke-linecap="round"
+        stroke-linejoin="round"
+        class="lucide lucide-heart"
+      >
+        <path
+          d="M19 14c1.49-1.46 3-3.21 3-5.5A5.5 5.5 0 0 0 16.5 3c-1.76 0-3 .5-4.5 2-1.5-1.5-2.74-2-4.5-2A5.5 5.5 0 0 0 2 8.5c0 2.3 1.5 4.05 3 5.5l7 7Z"
+        />
+      </svg>
+    </a>
+    <!-- Favorites List -->
+    <div
+      class="offcanvas offcanvas-start"
+      tabindex="-1"
+      id="favorites"
+      aria-labelledby="favoritesLabel"
+    >
+      <div class="offcanvas-header">
+        <h5 class="offcanvas-title" id="favoritesLabel">Favoritos</h5>
+        <button
+          type="button"
+          class="btn-close"
+          data-bs-dismiss="offcanvas"
+          aria-label="Close"
+        ></button>
+      </div>
+      <div class="offcanvas-body">
+        <div class="overflow-x-scroll">
+          <table class="table table-bordered table-hover">
+            <caption class="text-end p-2">
+              <span id="total">1</span>
+              favoritos
+            </caption>
+            <thead>
+              <tr>
+                <th>#</th>
+                <th>imagen</th>
+                <th>Nombre</th>
+                <th>Precio</th>
+              </tr>
+            </thead>
+            <tbody>
+              <tr onclick="seleccionar(this)">
+                <th>1</th>
+                <td>
+                  <img
+                    class="table-image"
+                    src="./assets/clothes-1.avif"
+                    alt="ropa"
+                  />
+                </td>
+                <td>Polera</td>
+                <td>19.9</td>
+              </tr>
+            </tbody>
+          </table>
+        </div>
+        <div class="d-flex justify-content-end gap-2">
+          <button
+            class="btn btn-outline-danger"
+            onclick="eliminarSeleccionados()"
+          >
+            <svg
+              xmlns="http://www.w3.org/2000/svg"
+              width="24"
+              height="24"
+              viewBox="0 0 24 24"
+              fill="none"
+              stroke="currentColor"
+              stroke-width="2"
+              stroke-linecap="round"
+              stroke-linejoin="round"
+              class="lucide lucide-trash"
+            >
+              <path d="M3 6h18" />
+              <path d="M19 6v14c0 1-1 2-2 2H7c-1 0-2-1-2-2V6" />
+              <path d="M8 6V4c0-1 1-2 2-2h4c1 0 2 1 2 2v2" />
+            </svg>
+          </button>
+          <button class="btn btn-danger" onclick="eliminarTodos()">
+            <svg
+              xmlns="http://www.w3.org/2000/svg"
+              width="24"
+              height="24"
+              viewBox="0 0 24 24"
+              fill="none"
+              stroke="currentColor"
+              stroke-width="2"
+              stroke-linecap="round"
+              stroke-linejoin="round"
+              class="lucide lucide-trash-2"
+            >
+              <path d="M3 6h18" />
+              <path d="M19 6v14c0 1-1 2-2 2H7c-1 0-2-1-2-2V6" />
+              <path d="M8 6V4c0-1 1-2 2-2h4c1 0 2 1 2 2v2" />
+              <line x1="10" x2="10" y1="11" y2="17" />
+              <line x1="14" x2="14" y1="11" y2="17" />
+            </svg>
+          </button>
+        </div>
+      </div>
+    </div>
+
     <script src="./bootstrap.bundle.min.js"></script>
+    <script src="./jquery.js"></script>
+    <script src="./catalogo.js"></script>
   </body>
 </html>
