--- a/src/crear-catalogo.html
+++ b/src/crear-catalogo.html
@@ -28,7 +28,7 @@
             <ul class="navbar-nav me-auto mb-2 mb-lg-0 mx-auto">
               <li class="nav-item">
                 <a
-                  class="nav-link active"
+                  class="nav-link"
                   aria-current="page"
                   href="./index.html"
                   >Inicio</a
@@ -38,7 +38,7 @@
                 <a class="nav-link" href="./catalogos.html">Catálogos</a>
               </li>
               <li class="nav-item">
-                <a class="nav-link" href="./crear-catalogo.html"
+                <a class="nav-link active" href="./crear-catalogo.html"
                   >Crear catálogo</a
                 >
               </li>
@@ -118,23 +118,7 @@
         </form>
         <div class="mt-4">
           <h4 class="text-center">Mis productos</h4>
-          <div class="d-flex flex-column gap-3 flex-sm-row justify-content-sm-end ">
-            <button
-              type="button"
-              class="btn btn-outline-danger px-4"
-              onclick="eliminar()"
-            >
-              Eliminar seleccionados
-            </button>
-            <button
-              type="button"
-              class="btn btn-danger px-4"
-              onclick="eliminarTodo()"
-            >
-              Eliminar todo
-            </button>
-          </div>
-          <div class="mt-3 overflow-x-scroll">
+          <div class="my-3 overflow-x-scroll">
             <table class="table table-hover table-bordered">
               <caption class="text-end p-3">
                 <span id="total">1</span>
@@ -167,6 +151,22 @@
                 </tr>
               </tbody>
             </table>
+          </div>
+          <div class="d-flex flex-column gap-3 flex-sm-row justify-content-sm-end ">
+            <button
+              type="button"
+              class="btn btn-outline-danger px-4"
+              onclick="eliminar()"
+            >
+              Eliminar seleccionados
+            </button>
+            <button
+              type="button"
+              class="btn btn-danger px-4"
+              onclick="eliminarTodo()"
+            >
+              Eliminar todo
+            </button>
           </div>
         </div>
       </section>
